feat(bao): 后端架构优化 Phase 1—6C 全量落地（可选契约/动态表安全/可靠事件/IoT 边界/依赖治理/制品隔离/版本身份）
Phase 1 backend-api-optional-contract（15/15）：模块内部结果统一 Optional<T>，
Controller 保持 Result<T>，真实异常不吞为 empty，机械守门与消费者全覆盖。
Phase 3 dynamic-table-data-safety-reference-integrity（17/17）：动态宽表 SQL
收敛唯一受控入口 DynamicTableSql（标识符校验+强制 tenant_id/deleted+占位符
绑定校验+父行锁），删除路径 fail closed，REFERENCE 三序并发引用完整性
PG 行为证据。
Phase 4 reliable-business-events（21/21）：五道 must-deliver 接缝统一为
事务内持久意图 + 可恢复领取/租约回收 + 稳定业务幂等 + 有限重试与可审计
终态；G3a/G3b 以真实 PostgreSQL 证明引擎/应用/流程发起共享同一提交边界；
新增 V96 迁移（h2/postgresql）。
Phase 5 iot-api-boundary-extraction（8/8）：新增零基础设施依赖模块
sw-basic-iot-api（Optional 契约），sw-basic-iot 反向依赖契约，sw-bpm-process
对 MQTT/GraalJS/Tencent SDK 依赖归零。
Phase 6A dependency-version-enforcement（8/8）：sw-dependencies 成为第三方
版本唯一所有者；Maven Enforcer dependencyConvergence 绑定根 build/plugins
（32/32 继承，validate 真实执行），版本分叉 14→0。
Phase 6B production-artifact-isolation（10/10）：唯一生产入口
scripts/build-prod.sh（clean test → -Pprod package → 制品门禁）与
scripts/check-prod-artifact.sh fail-closed；H2/dev 配置/devseed/五个 dev-only
适配器/IoT mock 全部退出正式制品；生产 IoT provider 可缺省并在调用点
503 fail closed（MockCloudProvider 归 src/dev/java）。
Phase 6C ci-friendly-version-identity（10/10）：34/34 POM 统一 CI-friendly
${revision}（develop 默认 0.2.0-SNAPSHOT，release 显式 0.2.0），Flatten
resolveCiFriendliesOnly 保证可消费 POM；scripts/check-version-identity.sh
五模式门禁与四向 fail-closed 探针；根 POM <url> 更新为 canonical
https://github.com/Chikaaho/Smart-WorkFlow-aPaaS-server。
Release workflow 改为 Maven effective version 求值并以 -Drevision 同版本
驱动唯一生产入口。
基线：mvn -B -o test 1570/0/0/0（32 模块，BUILD SUCCESS）；Flyway 终点 V96。
未包含：日志/临时产物（target/、dump.rdb 已忽略）。
授权：Owner「提交推送三仓所有改动（排除日志和临时产物）」。